List out the videos on dashboard

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -9,6 +9,8 @@
   <![endif]-->
 
   {{yield 'header'}}
-  {{yield}}
+  <div class="container">
+	  {{yield}}
+  </div>
   {{yield 'footer'}}
 </template>
