--- a/client/views/dashboard/videoList.html
+++ b/client/views/dashboard/videoList.html
@@ -6,7 +6,7 @@
 
 		<div class="col-md-6">
 			<h1>{{title}}</h1>
-			<a class="btn btn-default" href="#">Discuss It</a>
+			<a class="btn btn-default" href="{{pathFor 'videoDiscussion'}}">Discuss It</a>
 		</div>
 	</div>
 </template>
