--- a/client/views/dashboard/videoDiscussion.html
+++ b/client/views/dashboard/videoDiscussion.html
@@ -1,3 +1,16 @@
 <template name="videoDiscussion">
-	<h1> Video {{_id}}</h1>	
+	<h1>{{title}}</h1>
+	<div class="row">
+		<div class="col-md-6">
+			<iframe width="560" height="315" src="//{{url}}" frameborder="0" allowfullscreen></iframe>
+		</div>
+
+		<div class="col-md-6">
+			<div class="well">
+				{{#each comments}}
+					<p>Comment</p>
+				{{/each}}
+			</div>
+		</div>
+	</div>
 </template>
