--- a/client/views/dashboard/videoDiscussion.html
+++ b/client/views/dashboard/videoDiscussion.html
@@ -8,8 +8,15 @@
 		<div class="col-md-6">
 			<div class="well">
 				{{#each comments}}
-					<p>Comment</p>
+					{{> comment}}
 				{{/each}}
+				<form>
+					<div class="form-group">
+						<input id="message" type="textarea" class="form-control">
+						<br>
+						<input type="submit" class="btn btn-primary" id="submit">
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
