UI change for commenting

--- a/client/views/dashboard/videoDiscussion.html
+++ b/client/views/dashboard/videoDiscussion.html
@@ -6,18 +6,18 @@
 		</div>
 
 		<div class="col-md-6">
-			<div class="well">
+			<div class="well well-size">
 				{{#each comments}}
 					{{> comment}}
 				{{/each}}
-				<form>
-					<div class="form-group">
-						<input id="message" type="textarea" class="form-control">
-						<br>
-						<input type="submit" class="btn btn-primary" id="submit">
-					</div>
-				</form>
 			</div>
+		</div>
+	</div>
+	<div class="row well">
+		<div class="form-group comment-section">
+			<input id="message" type="textarea" class="form-control">
+			<br>
+			<input type="submit" class="btn btn-primary pull-right" id="submit">
 		</div>
 	</div>
 </template>
