--- a/client/views/dashboard/videoDiscussion.html
+++ b/client/views/dashboard/videoDiscussion.html
@@ -15,11 +15,13 @@
 	</div>
 	<div class="row well">
 		{{#if currentUser}}
-			<div class="form-group comment-section">
-				<input id="message" type="textarea" class="form-control">
-				<br>
-				<input type="submit" class="btn btn-primary pull-right" id="submit">
-			</div>
+			<form id="comment-form">
+				<div class="form-group comment-section">
+					<input id="message" type="textarea" class="form-control">
+					<br>
+					<input type="submit" class="btn btn-primary pull-right" id="submit">
+				</div>
+			</form>
 		{{else}}
 			<p>Please <a href="/sign-in">sign in</a> to comment.</p>
 		{{/if}}
