Refactor the video submit to only hit the DOM once

--- a/client/views/dashboard/videoSubmit.html
+++ b/client/views/dashboard/videoSubmit.html
@@ -4,19 +4,19 @@
 	</div>
 	{{#if currentUser}}
 		<div class="row">
-			<div class="form-group">
+			<form id="new-video-form">
 				<div class="form-group">
-				    <label for="videoURL">Video URL</label>
-				    <input type="text" class="form-control" id="videoURL">
-				  </div>
-			</div>
-			<div class="form-group">
+					<label for="videoURL">Video URL</label>
+					<input type="text" class="form-control" id="videoURL">
+				</div>
 				<div class="form-group">
-				    <label for="title">Title</label>
-				    <input type="text" class="form-control" id="title">
-				  </div>
-			</div>
-			<button class="btn btn-primary pull-right" id="submit">Submit</button>
+					<div class="form-group">
+						<label for="title">Title</label>
+						<input type="text" class="form-control" id="title">
+					</div>
+				</div>
+				<button class="btn btn-primary pull-right" id="submit">Submit</button>
+			</form>
 		</div>
 	{{else}}
 		<div class="row">
