Add button to dashboard on homepage

--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,4 +1,6 @@
 <template name="home">
   <h1>Look at videos</h1>
-  <a href="{{pathFor 'videoSubmit'}}">Submit video</a>
+  <a href="{{pathFor 'dashboard'}}" class="btn btn-primary">Go to Dashboard</a>
+  <br><br><br>
+  <a href="{{pathFor 'videoSubmit'}}" class="btn btn-success">Submit video</a>
 </template>
